--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "AI interface for a dummy database allowing users to retrieve data from the database using natural language. Project for BYU CS 452.",
   "scripts": {
     "compile": "npx tsc",
-    "start": "node dist/app.js"
+    "setenv": "export $(cat .env)",
+    "start": "node --no-deprecation dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "openai": "^4.80.1"
   }
 }
