--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     image: mysql:5.7
     container_name: sql-ai-db
     environment:
-      MYSQL_ROOT_PASSWORD: pass
+      MYSQL_ROOT_PASSWORD: root_pass
       MYSQL_DATABASE: sql-ai
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
